# create-user

./: README.md  db.sqlite3  manage.py  pyproject.toml
createuser/: asgi.py  settings.py  urls.py  wsgi.py
myuser/: admin.py  forms.py  models.py  views.py
myuser/migrations/: 0001_initial.py  0002_auto_20200824_1531.py
templates/: base.html  index.html  login.html
